# nmd-escape

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci_build_and_test.yml
Annotating_PTVesc/: __init__.py
annotating_nmd/: __init__.py
tests/: test_annotating_nmd.py  test_annotating_ptvesc.py
tests/data/: test_cds.bed
