[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'nmd-escape'
version = '0.1'
dependencies = [
        'pandas',
        'numpy',
    ]
requires-python = '>= 3.9'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["annotating_nmd*"]
exclude = ["tests*", "images*"]
